# dbusqml

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DBUS_w_QML.md  DESIGN.md  FutureDevelopment.md  KNOWN_ISSUES.md  README.md  dbus.cpp  dbus.h  dbusadaptor.cpp  dbusadaptor.h  dbuscatalog.cpp  dbuscatalog.h  dbusconnection.cpp  dbusconnection.h  dbuserror.h  dbusmessage.cpp  dbusmessage.h  dbuspendingreply.cpp  dbuspendingreply.h  dbusplugin.cpp  dbusqmlConfig.cmake.in  dbustypes.cpp  dbustypes.h
.github/workflows/: ci.yml
docs/: TYPES.md
examples/: README.md
examples/advanced/: KDEConnect.qml  MprisPlayer.qml  PowerControl.qml  SystemdManager.qml
examples/assets/: CloseButton.qml
examples/simple/: KeyboardLayout.qml  ListNames.qml  NetworkMonitor.qml  PortalSettings.qml
scripts/: build-dev  clean  clean-build  clean-install  install  run-all-examples-sequentially  run-examples  run-qml-tests  run-tests
tests/: test_api.qml  test_dbusconnection.cpp  test_dbustypes.cpp  test_reactive_binding.qml
types/: org.freedesktop.Notifications.xml  org.freedesktop.ScreenSaver.xml  org.freedesktop.UPower.xml  org.freedesktop.login1.Manager.xml  org.freedesktop.portal.NetworkMonitor.xml  org.freedesktop.portal.Settings.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
